# rluff

./: .gitignore  README.md  SimpleLiftingLineTorchDemo.py
assets/spm-asm-v6-3/: CMakeLists.txt
flapper_sim/Flapper-Env/: analysis.py  pretrain.py  setup.py  train.py
isaac/IsaacGymEnvs/assets/urdf/Glider_S_UI/: CMakeLists.txt  package.xml
isaac/IsaacGymEnvs/assets/urdf/Glider_S_UI/config/: joint_names_Glider_S_UI.yaml
isaac/IsaacGymEnvs/assets/urdf/Glider_S_UI/launch/: display.launch  gazebo.launch
isaac/IsaacGymEnvs/assets/urdf/Glider_S_UI/meshes/: A_dial.STL  Altimeter.STL  S1_dial.STL  Speedometer1.STL  base_link.STL
isaac/IsaacGymEnvs/assets/urdf/Glider_S_UI/urdf/: Glider_S_UI.csv  Glider_S_UI.urdf
isaac_flapper/: erl_test.py  isaactest.py  train.py
isaac_flapper/cfg/: config.yaml
isaac_flapper/tasks/: __init__.py  bird.py
isaacflapper3/cfg/: config.yaml
isaacflapper3/fun_data/: DOFstates.pt  LiftDist.pt  Rootstates.pt  WingCOMs.pt  ll_dist_data.pt  ll_dist_plotter.py
isaacflapper3/tasks/: LLtest.py  __init__.py  bird.py  bird2.py  bird3.py  glider_physics.py
mathematica_notebooks/: demo_assignment.nb
playplace/: comp_subg_main.py
playplace/myTD3/: mymain.py  myoptions.py  myplottingutils.py  mypostanalysis.py  mytorquegenerators.py
playplace/myTD3_pi/: README.md  mymain.py  myoptions.py  mypostanalysis.py
playplace/odrive_testing/: odrive_sys_test1.py  odrive_test1.py  odrive_test2.py  odrive_test3.py  odrive_test4.py
playplace/pc2pi/: pc_main.py  pi_main.py
playplace/pendulum-1.0/: README.md  pc_main.py  pi_main.py
(+8007 files in other folders)
